Fix broken after ENVVars changes. Support for empty package Names. Remove deprecated code.