@@ -9,6 +9,7 @@ import com.amazonaws.serverless.proxy.internal.servlet.AwsHttpServletResponse;
 import com.amazonaws.serverless.proxy.internal.servlet.AwsProxyHttpServletRequest;
 import com.amazonaws.serverless.proxy.internal.servlet.AwsServletContext;
 import com.amazonaws.serverless.proxy.model.MultiValuedTreeMap;
+import com.genexus.specific.java.Connect;
 import com.genexus.specific.java.LogManager;
 import com.genexus.webpanels.GXWebObjectStub;
 import org.glassfish.jersey.server.ResourceConfig;
@@ -34,6 +35,7 @@ public class LambdaHandler implements RequestHandler<AwsProxyRequest, AwsProxyRe
 	public static JerseyLambdaContainerHandler<AwsProxyRequest, AwsProxyResponse> handler = null;
 	private static ResourceConfig jerseyApplication = null;
 	private static final String BASE_REST_PATH = "/rest/";
+	private static  final String GX_APPLICATION_CLASS = "GXApplication";
 
 	public LambdaHandler() throws Exception {
 		if (LambdaHandler.jerseyApplication == null) {
@@ -165,12 +167,13 @@ public class LambdaHandler implements RequestHandler<AwsProxyRequest, AwsProxyRe
 
 	private static Application initialize() throws Exception {
 		logger = LogManager.initialize(".", LambdaHandler.class);
+		Connect.init();
 		IniFile config = com.genexus.ConfigFileFinder.getConfigFile(null, "client.cfg", null);
 		String className = config.getProperty("Client", "PACKAGE", null);
 		Class<?> cls;
 		try {
-			cls = Class.forName(className + ".GXApplication");
-			Application app = (Application) cls.newInstance();
+			cls = Class.forName(className.isEmpty() ? GX_APPLICATION_CLASS: String.format("%s.%s", className, GX_APPLICATION_CLASS));
+			Application app = (Application) cls.getDeclaredConstructor().newInstance();
 			ApplicationContext appContext = ApplicationContext.getInstance();
 			appContext.setServletEngine(true);
 			appContext.setServletEngineDefaultPath("");
